--- a/src/main/resources/templates/change.html
+++ b/src/main/resources/templates/change.html
@@ -40,7 +40,13 @@
         <input type="submit" class="btn btn-info btn-lg" value="Промени ролята"/>
     </div>
 </form>
+
+<footer class="footer text-center position-absolute">
+    <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
+</footer>
 </body>
+
+
 </html>
 
 
