--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -11,7 +11,8 @@
 </header>
 
 
-    <article class="about">
+<section class="about_container">
+    <article class=" about">
 
 <header> <h3>Кои сме ние</h3></header>
 
@@ -36,6 +37,8 @@
         </div>
 
     </article>
+
+</section>
 
 </body>
 
