--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -107,7 +107,7 @@
 
 </div>
 
-<footer class="footer text-center position-relative">
+<footer class="footer text-center">
     <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
 </footer>
 
