--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -21,9 +21,9 @@
 </head>
 <body>
 <div>
-<nav class="navbar navbar-expand-lg fixed-top rounded">
+    <nav class="navbar navbar-expand-lg rounded nav-details">
 
-    <ul class="navbar-nav mr-auto col-12 justify-content-between">
+        <ul class="navbar-nav mr-auto col-12 justify-content-between">
 
         <li class="nav-item"><a class="nav-link" href="/">Начало</a></li>
 
