--- a/src/main/resources/templates/change.html
+++ b/src/main/resources/templates/change.html
@@ -41,11 +41,11 @@
     </div>
 </form>
 
-<footer class="footer text-center">
-    <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
-</footer>
 </body>
 
+<footer class="footer footer-change">
+    <h6>&copy; 2023 - Ани Петкова - Всички права запазени.</h6>
+</footer>
 
 </html>
 
