--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -77,6 +77,11 @@ h3 {
     transition: transform 0.3s;
 }
 
+.boxes .main-btn:hover{
+    transform: scale(1.2);
+    transition: transform 0.3s;
+}
+
 .fun-about:hover{
     transform: scale(1.3);
     transition: transform 0.3s;
@@ -117,7 +122,7 @@ h3 {
 
 .footer {
     /*background-color: #3D6440;*/
-    color: #011e08;
+    color: #d0e3d5;
     padding: 5px;
     grid-gap: 20px;
     list-style: none;
@@ -133,17 +138,13 @@ h3 {
 
 }
 
-/*footer {*/
-
-/*    margin-top: 10px;*/
-/*    background: var(--dark);*/
-/*    color: var(--light);*/
-/*    text-align: center;*/
-/*    padding: 1rem;*/
-/*}*/
 
 .container, .container-fluid {
     padding-top: 4%;
+}
+
+.container-register{
+    padding-top: 0;
 }
 
 .container-add {
@@ -265,11 +266,6 @@ p {
 }
 
 
-/*.dog-img:hover{*/
-/*    transform: scale(1.1);*/
-/*    transition: transform 0.3s;*/
-/*}*/
-
 .a-class:hover{
     text-decoration: none;
     color: wheat;
@@ -303,13 +299,6 @@ form.main-form {
 .logged-user {
     color: white;
 }
-
-
-/*.input-group {*/
-/*     position: absolute;*/
-/*     top: 11%;*/
-/*     left: 0;*/
-/*}*/
 
 
 .btn {
@@ -379,27 +368,6 @@ form.main-form {
     text-decoration: none;
 
 }
-
-/*.button-holder-delete {*/
-/*   margin-left: 150px;*/
-/*    margin-top: 100px;*/
-/*}*/
-
-/*.button-delete {*/
-/*    display: inline-block;*/
-/*}*/
-
-
-
-
-/*img {*/
-/*    max-width: 100%;*/
-/*}*/
-
-/*.wrapper {*/
-/*    display: grid;*/
-/*    grid-gap: 20px;*/
-/*}*/
 
 /* Navigation */
 .main-nav ul {
@@ -494,6 +462,11 @@ form.main-form {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
+/*.boxes .box:hover {*/
+/*    transform: scale(1);*/
+/*    transition: transform 0.3s;*/
+/*}*/
+
 .box {
     /*border-bottom-left-radius: 5px;*/
     /*border-bottom-right-radius: 5px;*/
@@ -517,23 +490,10 @@ form.main-form {
 }
 
 
-/*!* Portfolio *!*/
-/*.gallery {*/
-/*    display: grid;*/
-/*    grid-gap: 20px;*/
-/*    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));*/
-/*}*/
-
 .gallery img {
     width: 100%;
     box-shadow: var(--shadow);
 }
-
-/* Footer */
-/*.is-invalid {*/
-/*    background-color: red;*/
-
-/*}*/
 
 
 
@@ -617,110 +577,6 @@ form.main-form {
     padding: 2rem;
 }
 
-
-
-/*#map {*/
-/*    height: 500px;*/
-/*    width: 100%;*/
-/*    border-radius: 10px;*/
-/*}*/
-
-/*#video iframe {*/
-/*    width: 100%;*/
-/*    height: 500px;*/
-/*    border-radius: 10px;*/
-/*}*/
-
-
-/*!**/
-/*    CSS for profile*/
-/* *!*/
-/*body {*/
-/*    background-color: rgba(0, 0, 0, 6);*/
-/*}*/
-
-/*.profile-card {*/
-/*    border: none;*/
-/*    position: relative;*/
-/*    overflow: hidden;*/
-/*    border-radius: 8px;*/
-/*    cursor: pointer;*/
-/*    min-height: 65vh;*/
-/*}*/
-
-/*.profile-card:before {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    width: 4px;*/
-/*    height: 100%;*/
-/*    background-color: #bbbef5;*/
-/*    transform: scaleY(1);*/
-/*    transition: all 0.5s;*/
-/*    transform-origin: bottom*/
-/*}*/
-
-/*.profile-card:after {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    width: 4px;*/
-/*    height: 100%;*/
-/*    background-color: #0833e3;*/
-/*    transform: scaleY(0);*/
-/*    transition: all 0.5s;*/
-/*    transform-origin: bottom*/
-/*}*/
-
-/*.profile-card:hover::after {*/
-/*    transform: scaleY(1)*/
-/*}*/
-
-/*.fonts {*/
-/*    font-size: 20px*/
-/*}*/
-
-/*.social-list {*/
-/*    display: flex;*/
-/*    list-style: none;*/
-/*    justify-content: center;*/
-/*    padding: 0*/
-/*}*/
-
-/*.social-list li {*/
-/*    padding: 10px;*/
-/*    color: #0833e3;*/
-/*    font-size: 19px*/
-/*}*/
-
-/*.buttons button:nth-child(1) {*/
-/*    border: 1px solid #0833e3 !important;*/
-/*    color: #ffffff;*/
-/*    height: 40px*/
-/*}*/
-
-/*.buttons button:nth-child(1):hover {*/
-/*    border: 1px solid #0833e3 !important;*/
-/*    color: #fff;*/
-/*    height: 40px;*/
-/*    background-color: #0833e3*/
-/*}*/
-
-/*.buttons button:nth-child(2) {*/
-/*    border: 1px solid #0833e3 !important;*/
-/*    color: #ffffff;*/
-/*    height: 40px*/
-/*}*/
-
-/*.buttons button:nth-child(2):hover {*/
-/*    border: 1px solid #0833e3 !important;*/
-/*    color: #fff;*/
-/*    height: 40px;*/
-/*    background-color: #0833e3*/
-/*}*/
-
 /*
 /* Drop-down menu {
  */
@@ -735,13 +591,6 @@ nav ul li:hover ul {
     grid-template-columns: repeat(3, 1fr);
 }
 
-/*nav ul li ul li a {*/
-/*    display: block;*/
-/*    padding: 10px 20px;*/
-/*    text-decoration: none;*/
-/*    color: #333;*/
-/*    transition: background-color 0.3s;*/
-/*}*/
 
 nav ul li ul li a:hover {
     color: #f0f0f0;
