--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,7 +10,7 @@
     <nav th:replace="~{fragments/navbar}"></nav>
 </header>
 
-<div class="container">
+<div class="container container-register">
     <h2 class="text-center text-white">Регистрация</h2>
     <form th:action="@{/register}"
            th:method="post"
