--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,7 +21,8 @@
                    th:value="${username}"
                    type="text"
                    class="form-control"
-                   placeholder="Потребителско име"/>
+                   placeholder="Потребителско име"
+                   autocomplete="username"/>
         </div>
         <div class="form-group">
             <label for="password" class="text-white font-weight-bold">Парола</label>
@@ -29,7 +30,8 @@
                    name="password"
                    type="password" min="2"
                    max="20" class="form-control"
-                   placeholder="Парола"/>
+                   placeholder="Парола"
+            autocomplete="current-password"/>
 
         </div>
 
